# sudimir-backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  runserver.py  traefik.yaml
alembic/: env.py
alembic/versions/: 0bdf0b0cbee2_add_bookings_table.py  0fdc5a123fb6_initial_migration.py  183c52b15c5f_create_admin.py  1a8b86ca9419_add_service_table.py  23711128ef91_change_fields_in_booking.py  55e890b2f766_fix_relations_4.py  82d044f8943b_fix_relations_3.py  b6a51e28e496_fix_relashions_2.py  cd5c2fad49c3_add_cascade_delete.py  e08266633e93_fix_relations.py  eaefcff35784_add_user_table.py
backend/: constants.py  main.py
backend/cache/: cache.py
backend/config/: config.py
backend/database/: connection.py
backend/database/dao/: __init__.py  booking.py  service.py  user.py
backend/database/facade/: __init__.py  facade.py  interface.py
backend/database/tables/: __init__.py  booking.py  service.py  user.py
backend/kafka/: booking.py
backend/logging/: __init__.py  log.py
backend/middleware/: __init__.py  auth.py  exception.py  logging.py
backend/models/: __init__.py  booking.py  errors.py  service.py  token.py  user.py  utils.py
backend/routers/: auth.py  booking.py  service.py  user.py
backend/services/: auth.py  booking.py  service.py  token.py  user.py
backend/utils/: auth.py  user.py
